--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "^0.3.3",
-    "eslint": "6.8.0",
+    "eslint": "^6.8.0",
     "eslint-config-trybe-frontend": "1.2.0",
     "eslint-plugin-babel": "^5.3.1",
     "stylelint": "^13.8.0",
