--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "test:debug": "react-scripts --inspect test --runInBand --no-cache",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
