--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,47 +1,22 @@
+name: deploy
 on:
-  pull_request:
-    types: [opened, synchronize]
-
+  push:
+    branches:
+      - main-group-6
 jobs:
-  eslint:
+  deploy:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1.4.4
+      - uses: actions/setup-node@v1
         with:
-          node-version: '12'
-      - name: EsLint
-        uses: betrybe/eslint-linter-action@v2.1
+          node-version: '14.x'
+      - name: Build web-app
+        run: |
+          npm ci
+          npm run build
+      - name: Deploy to gh-pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-  
-  stylelint:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1.4.4
-        with:
-          node-version: '12'
-      - name: Stylelint
-        uses: betrybe/stylelint-linter-action@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-  evaluator_job:
-    runs-on: ubuntu-18.04
-    name: Evaluator job
-    needs: eslint
-    steps:
-      - uses: actions/checkout@v2
-      - name: Evaluator step
-        id: evaluator
-        uses: betrybe/react-scripts-evaluator-action@v4
-        with:
-          repository-test-name: 'betrybe/sd-0x-project-frontend-online-store-tests'
-          repository-test-branch: 'master'
-      - name: Store evaluation step
-        uses: betrybe/store-evaluation-action@v2
-        with:
-          evaluation-data: ${{ steps.evaluator.outputs.result }}
-          environment: production
-          pr-number: ${{ steps.evaluator.outputs.pr-number }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
