--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sd-0x-project-frontend-online-store",
   "version": "0.1.0",
-  "homepage": ".",
+  "homepage": "https://CarolinaInglethe.github.io/ci-project-frontend-online-store",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.5.0",
@@ -20,7 +20,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx",
-    "lint:styles": "npx stylelint '**/*.css'"
+    "lint:styles": "npx stylelint '**/*.css'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
@@ -39,6 +41,7 @@
     "eslint": "^6.8.0",
     "eslint-config-trybe-frontend": "1.2.0",
     "eslint-plugin-babel": "^5.3.1",
+    "gh-pages": "^3.2.3",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0"
